# gitlab_agent_orchestrator

./: .dockerignore  .env.example  .gitignore  CURRENT_PROGRESS.md  LICENSE  README.md  README_zh.md  gitlab_agent_orchestrator_prd.md  pyproject.toml
docker/sandbox/: Dockerfile  README.md  README_zh.md  build.ps1
docs/: user-guide.md
examples/strict-dev-png-sample/: .gitignore  Cargo.toml  README.md  README_zh.md
examples/strict-dev-png-sample/context-packs/: PNG-CHUNK-001.md  PNG-SIGNATURE-001.md
examples/strict-dev-png-sample/contracts/: png_chunk.yaml  png_signature.yaml
examples/strict-dev-png-sample/docs/: manual_orchestrator_test.md
examples/strict-dev-png-sample/project-meta/: 00_project_manifest.yaml  03_compatibility_levels.md  04_module_map.yaml  05_security_requirements.yaml
examples/strict-dev-png-sample/src/: chunk.rs  error.rs  lib.rs  signature.rs
examples/strict-dev-png-sample/task-cards/: PNG-CHUNK-001.yaml  PNG-SIGNATURE-001.yaml
examples/strict-dev-png-sample/test-oracles/: malformed_cases.yaml  valid_cases.yaml
orchestrator/: agent.py  config.py  db.py  git_ops.py  gitlab_client.py  handoff.py  issue_poller.py  main.py  models.py  prompt.py  sandbox.py  validation.py  webhook.py  worker.py
orchestrator/workflows/: __init__.py  base.py  labels.py  registry.py
scripts/: doctor.ps1  init-env.ps1  install-skill.ps1  start.ps1  status.ps1  stop.ps1
skills/gitlab-agent-orchestrator/: SKILL.md
tests/: conftest.py  test_db.py  test_git_ops.py  test_handoff.py  test_prompt.py  test_webhook.py  test_workflows.py
(+10 files in other folders)
